--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             'Initializing hack tool...',
             'Bypassing security protocols...',
             'Accessing mainframe...',
-            'Downloading sensitive data 100TB...',
-            'Injecting malware...',
+            'Downloading sensitive data 100TB',
+            'Injecting malware by frhndevweb :)',
             'Transfer complete. Disconnecting...'
         ];
 
