--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         const commands = [
             'Initializing hack tool...',
             'Bypassing security protocols...',
-            'Accessing mainframe...',
-            'Downloading sensitive data 100TB',
+            'Accessing malware...',
+            'seluruh data anda akan tersebar...',
             'Injecting malware by frhndevweb :)',
-            'Transfer complete. Disconnecting...'
+            'Transfer complete. selamat, data anda tersebar...'
         ];
 
         let currentCommand = 0;
