--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             'seluruh data anda akan tersebar...',
             'Injecting malware by frhndevweb :)',
             'Transfer complete. selamat, data anda tersebar...'
+            '100 foto termasuk video anda tersebar di deepweb'
         ];
 
         let currentCommand = 0;
@@ -78,7 +79,7 @@
 
                 typeChar();
             } else {
-                output.textContent += 'Hack successful!';
+                output.textContent += 'Muat Ulang agar data anda tidak tersebar!';
             }
         }
 
