--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daget by frhndevweb</title>
+    <title>daget by frhndevweb</title>
     <style>
         body {
             background-color: black;
@@ -51,11 +51,10 @@
         const commands = [
             'Initializing hack tool...',
             'Bypassing security protocols...',
-            'Accessing malware...',
-            'seluruh data anda akan tersebar...',
-            'Injecting malware by frhndevweb :)',
-            'Transfer complete. selamat, data anda tersebar...'
-            '100 foto termasuk video anda tersebar di deepweb'
+            'Accessing mainframe...',
+            'Downloading sensitive data 100TB',
+            'Injecting malware by frhndevweb',
+            'Transfer complete. seluruh data anda tersebar...'
         ];
 
         let currentCommand = 0;
@@ -79,7 +78,7 @@
 
                 typeChar();
             } else {
-                output.textContent += 'Muat Ulang agar data anda tidak tersebar!';
+                output.textContent += 'Hack successful!';
             }
         }
 
