--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://github.com/frhndevweb/daget_by_frhndevweb/blob/master/IMG_20240603_215911.jpg?raw=true" alt="Hacker Logo" class="logo">
+        <img src="https://github.com/frhndevweb/daget_by_frhndevweb/blob/master/IMG_20240603_215911.png?raw=true" alt="Hacker Logo" class="logo">
         <div class="terminal">
             <div id="output"></div>
         </div>
